--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,3 +1,37 @@
+@mixin default-font {
+  font-size: 16px;
+  line-height: 24px;
+}
+
+@mixin big-font {
+  font-size: 24px;
+  line-height: 36px;
+}
+
 body {
   font-family: "IBM Plex Sans", sans-serif;
+  padding: 0;
+  margin: 0;
+
+  min-width: 100vw;
+  min-height: 100vh;
+
+  display: flex;
+  justify-content: stretch;
+}
+
+#app {
+  flex-grow: 1;
+
+  display: flex;
+  justify-content: center;
+}
+
+#router-view {
+  @media screen and (min-width: 786px) {
+    width: 738px;
+  }
+  @media screen and (max-width: 786px) {
+    width: calc(100vw - 48px);
+  }
 }
