radio selection alters css classes and styling of label

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -183,6 +183,10 @@ article {
     & + label {
       margin-top: mod(3/2);
     }
+    &.selected {
+      border-color: black;
+      font-weight: 700;
+    }
   }
   &.radio-container {
     label {
