--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -110,6 +110,14 @@ article {
   border-top: 1px solid $light_color;
   display: flex;
 
+  @media screen and (max-width: $breakpoint) {
+    flex-direction: column;
+    align-items: flex-start;
+    .text-headings {
+      padding-bottom: mod(1);
+    }
+  }
+
   align-items: center;
   justify-content: space-between;
 
@@ -126,6 +134,9 @@ article {
   .progress-bar-container {
     display: flex;
     align-items: center;
+    @media screen and (max-width: $breakpoint) {
+      width: 100%;
+    }
   }
 
   .progress-bar {
@@ -134,6 +145,11 @@ article {
     border-radius: $h;
     margin-left: mod(3/2);
     width: mod(12);
+    @media screen and (max-width: $breakpoint) {
+      width: unset;
+      min-width: mod(12);
+      flex-grow: 1;
+    }
     background: $light_color;
     position: relative;
     overflow: hidden;
